<resources>
    <string name="app_name">Yummy Recipes</string>
    <string name="text_name">Rizal Fahlepi</string>
    <string name="text_email">fahlepyrizal@gmail.com</string>
    <string name="text_about">About</string>
    <string name="text_person">Person</string>
    <string name="text_ingredients">Ingredients</string>
    <string name="text_directions">Directions</string>
    <string name="text_details">Details</string>
    <string name="text_double_dot">:</string>
    <string name="text_total_time">Total Time</string>
    <string name="text_prep_time">Prep Time</string>
    <string name="text_yields">Yields</string>
    <string name="text_date">Date</string>
</resources>